Modified the new appointment creation message and pop-up
added notes in the new appointment
modified the message to be easier to read.

--- a/public/views/psychologue/calendar.hbs
+++ b/public/views/psychologue/calendar.hbs
@@ -92,6 +92,11 @@
             </select>
           </div>
 
+          <div class="form-group mt-2">
+            <label for="m_note">Note: </label>
+            <input name="m_note" class="form-control" value="{{dataValues.note}}">
+          </div>
+
         </div>
 
         <div class="modal-footer">
